force-app/main/default/objects/TC_Case__x/fields/Frequency_of_Impact_c__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_Impact_c__c</fullName>
    <externalDeveloperName>Frequency_of_Impact__c</externalDeveloperName>
    <inlineHelpText>How often does this happen in regards to reservations, reporting, etc.?</inlineHelpText>
    <label>Frequency of Impact</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Intermittent</fullName>
            </value>
            <value>
                <fullName>Sporadic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>