force-app/main/default/objects/TC_Case__x/fields/HasSelfServiceComments__c.field-meta.xml
<CustomField>
    <fullName>HasSelfServiceComments__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>HasSelfServiceComments</externalDeveloperName>
    <label>Self-Service Commented</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>