force-app/main/default/objects/TC_Case__x/fields/Hours_in_Process_c__c.field-meta.xml
<CustomField>
    <fullName>Hours_in_Process_c__c</fullName>
    <externalDeveloperName>Hours_in_Process__c</externalDeveloperName>
    <inlineHelpText>Number of hours from date/ time assigned to date/time closed.</inlineHelpText>
    <label>Hours in Process</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Number</type>
</CustomField>