force-app/main/default/objects/TC_Case__x/fields/Impl_Live_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Impl_Live_Date_c__c</fullName>
    <externalDeveloperName>Impl_Live_Date__c</externalDeveloperName>
    <label>Impl Live Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>