force-app/main/default/objects/TC_Case__x/fields/Implementation_Product_c__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Product_c__c</fullName>
    <externalDeveloperName>Implementation_Product__c</externalDeveloperName>
    <inlineHelpText>Product from the Implementation Detail</inlineHelpText>
    <label>Implementation Product</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>