force-app/main/default/objects/TC_Case__x/fields/Inbound_Outbound_c__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Outbound_c__c</fullName>
    <externalDeveloperName>Inbound_Outbound__c</externalDeveloperName>
    <label>Inbound/Outbound</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>