force-app/main/default/objects/TC_Case__x/fields/Info_Needed_c__c.field-meta.xml
<CustomField>
    <fullName>Info_Needed_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Info_Needed__c</externalDeveloperName>
    <label>Info Needed</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>