force-app/main/default/objects/TC_Case__x/fields/Info_Needed_Explaination_c__c.field-meta.xml
<CustomField>
    <fullName>Info_Needed_Explaination_c__c</fullName>
    <externalDeveloperName>Info_Needed_Explaination__c</externalDeveloperName>
    <label>Info Needed Explaination</label>
    <length>32768</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>