force-app/main/default/objects/TC_Case__x/fields/INTL_SLA_Traffic_Light_c__c.field-meta.xml
<CustomField>
    <fullName>INTL_SLA_Traffic_Light_c__c</fullName>
    <externalDeveloperName>INTL_SLA_Traffic_Light__c</externalDeveloperName>
    <label>INTL SLA Traffic Light</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>