force-app/main/default/objects/TC_Case__x/fields/Issue_SLA_c__c.field-meta.xml
<CustomField>
    <fullName>Issue_SLA_c__c</fullName>
    <externalDeveloperName>Issue_SLA__c</externalDeveloperName>
    <label>Issue SLA</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>