force-app/main/default/objects/TC_Case__x/fields/KIERR_created_by_c__c.field-meta.xml
<CustomField>
    <fullName>KIERR_created_by_c__c</fullName>
    <externalDeveloperName>KIERR_created_by__c</externalDeveloperName>
    <label>KIERR created by</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Care/Implementations</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>TAM International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>