force-app/main/default/objects/TC_Case__x/fields/L3_Owner_c__c.field-meta.xml
<CustomField>
    <fullName>L3_Owner_c__c</fullName>
    <externalDeveloperName>L3_Owner__c</externalDeveloperName>
    <label>L3 Owner</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>