force-app/main/default/objects/TC_Case__x/fields/Last_Case_Comment_c__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Comment_c__c</fullName>
    <externalDeveloperName>Last_Case_Comment__c</externalDeveloperName>
    <inlineHelpText>When was a comment last added to this case?</inlineHelpText>
    <label>Last Case Comment</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>