force-app/main/default/objects/TC_Case__x/fields/Last_Inbound_Email_From_Email_received_c__c.field-meta.xml
<CustomField>
    <fullName>Last_Inbound_Email_From_Email_received_c__c</fullName>
    <externalDeveloperName>Last_Inbound_Email_From_Email_received__c</externalDeveloperName>
    <inlineHelpText>What is the email address of the last recipient sending an email to this Case?</inlineHelpText>
    <label>Last Inbound Email &quot;From Email&quot; received</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Email</type>
</CustomField>