force-app/main/default/objects/TC_Case__x/fields/Last_Status_Change_c__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Change_c__c</fullName>
    <externalDeveloperName>Last_Status_Change__c</externalDeveloperName>
    <label>Last Status Change</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>