force-app/main/default/objects/TC_Case__x/fields/Last_Workflow_c__c.field-meta.xml
<CustomField>
    <fullName>Last_Workflow_c__c</fullName>
    <externalDeveloperName>Last_Workflow__c</externalDeveloperName>
    <inlineHelpText>Shows whatever the last workflow triggered was. This will ONLY work if the workflow itself has a field update that will fill in this field with the Workflow name.</inlineHelpText>
    <label>Last Workflow</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>