force-app/main/default/objects/TC_Case__x/fields/Level_1_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Date_c__c</fullName>
    <externalDeveloperName>Level_1_Date__c</externalDeveloperName>
    <label>Level 1 Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>