force-app/main/default/objects/TC_Case__x/fields/Level_3_Owner_c__c.field-meta.xml
<CustomField>
    <fullName>Level_3_Owner_c__c</fullName>
    <externalDeveloperName>Level_3_Owner__c</externalDeveloperName>
    <label>Level 3 Owner</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>