force-app/main/default/objects/TC_Case__x/fields/Logged_in_User_c__c.field-meta.xml
<CustomField>
    <fullName>Logged_in_User_c__c</fullName>
    <externalDeveloperName>Logged_in_User__c</externalDeveloperName>
    <label>Logged in User</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>