force-app/main/default/objects/TC_Case__x/fields/Media_Library_Additions_Modifications_c__c.field-meta.xml
<CustomField>
    <fullName>Media_Library_Additions_Modifications_c__c</fullName>
    <externalDeveloperName>Media_Library_Additions_Modifications__c</externalDeveloperName>
    <label>Media Library Additions/Modifications</label>
    <length>32000</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>