force-app/main/default/objects/TC_Case__x/fields/Media_Library_Deletions_c__c.field-meta.xml
<CustomField>
    <fullName>Media_Library_Deletions_c__c</fullName>
    <externalDeveloperName>Media_Library_Deletions__c</externalDeveloperName>
    <label>Media Library Deletions</label>
    <length>32000</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>