force-app/main/default/objects/TC_Case__x/fields/My_Cases_c__c.field-meta.xml
<CustomField>
    <fullName>My_Cases_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>My_Cases__c</externalDeveloperName>
    <label>My Cases</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>