force-app/main/default/objects/TC_Case__x/fields/Need_By_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Need_By_Date_c__c</fullName>
    <externalDeveloperName>Need_By_Date__c</externalDeveloperName>
    <inlineHelpText>Enter the date you would like to have your project completed.  Please note, this date will be used for planing.</inlineHelpText>
    <label>Need By Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>