force-app/main/default/objects/TC_Case__x/fields/New_Renew_Classification_c__c.field-meta.xml
<CustomField>
    <fullName>New_Renew_Classification_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>New_Renew_Classification__c</externalDeveloperName>
    <label>New/Renew Classification</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>