force-app/main/default/objects/TC_Case__x/fields/Next_Steps_c__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_c__c</fullName>
    <externalDeveloperName>Next_Steps__c</externalDeveloperName>
    <label>Next Steps</label>
    <length>32768</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>