force-app/main/default/objects/TC_Case__x/fields/Notify_Contact_of_Closed_Case_c__c.field-meta.xml
<CustomField>
    <fullName>Notify_Contact_of_Closed_Case_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Notify_Contact_of_Closed_Case__c</externalDeveloperName>
    <inlineHelpText>Select this box to send a notification to the Case Contact that their case has been resolved.</inlineHelpText>
    <label>Notify Contact of Closed Case</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>