force-app/main/default/objects/TC_Case__x/fields/Number_of_Requests_c__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Requests_c__c</fullName>
    <externalDeveloperName>Number_of_Requests__c</externalDeveloperName>
    <label>Number of Requests</label>
    <precision>6</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>