force-app/main/default/objects/TC_Case__x/fields/On_Hold_Check_Data_c__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Check_Data_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>On_Hold_Check_Data__c</externalDeveloperName>
    <inlineHelpText>Box is checked when status goes from &quot;On Hold - Check Data&quot; to &quot;Report Checked - No Issues Found&quot;</inlineHelpText>
    <label>Check Data to No Issue Found</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>