force-app/main/default/objects/TC_Case__x/fields/Open_Closed_same_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Open_Closed_same_Date_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Open_Closed_same_Date__c</externalDeveloperName>
    <label>Open/Closed same Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>