force-app/main/default/objects/TC_Case__x/fields/Operating_System_c__c.field-meta.xml
<CustomField>
    <fullName>Operating_System_c__c</fullName>
    <externalDeveloperName>Operating_System__c</externalDeveloperName>
    <label>Operating System</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Windows 7</fullName>
            </value>
            <value>
                <fullName>Windows Vista</fullName>
            </value>
            <value>
                <fullName>Windows XP</fullName>
            </value>
            <value>
                <fullName>Windows 2000</fullName>
            </value>
            <value>
                <fullName>MAC OS 9</fullName>
            </value>
            <value>
                <fullName>MAC OS 8</fullName>
            </value>
            <value>
                <fullName>MAC OSX</fullName>
            </value>
            <value>
                <fullName>Linux</fullName>
            </value>
            <value>
                <fullName>BlackBerry</fullName>
            </value>
            <value>
                <fullName>iPhone</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>