force-app/main/default/objects/TC_Case__x/fields/Opportunity_c__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_c__c</fullName>
    <externalDeveloperName>Opportunity__c</externalDeveloperName>
    <label>Related Opportunity</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>