force-app/main/default/objects/TC_Case__x/fields/Opportunity_Product_2_c__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_2_c__c</fullName>
    <externalDeveloperName>Opportunity_Product_2__c</externalDeveloperName>
    <label>Opportunity Product #2</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accor Package</fullName>
            </value>
            <value>
                <fullName>Agency360</fullName>
            </value>
            <value>
                <fullName>Agency360 Enterprise</fullName>
            </value>
            <value>
                <fullName>AIP</fullName>
            </value>
            <value>
                <fullName>Basic Bundle</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>ChannelDirect</fullName>
            </value>
            <value>
                <fullName>Channel Position</fullName>
            </value>
            <value>
                <fullName>Consortia</fullName>
            </value>
            <value>
                <fullName>Corporate Hotelligence</fullName>
            </value>
            <value>
                <fullName>Custom Premium</fullName>
            </value>
            <value>
                <fullName>Custom Premium Responsive</fullName>
            </value>
            <value>
                <fullName>Custom Pro</fullName>
            </value>
            <value>
                <fullName>Data Exchange</fullName>
            </value>
            <value>
                <fullName>Demand360</fullName>
            </value>
            <value>
                <fullName>Demand Position</fullName>
            </value>
            <value>
                <fullName>Destination Insights</fullName>
            </value>
            <value>
                <fullName>DRM</fullName>
            </value>
            <value>
                <fullName>EMA</fullName>
            </value>
            <value>
                <fullName>EZ Yield</fullName>
            </value>
            <value>
                <fullName>EZYield Link</fullName>
            </value>
            <value>
                <fullName>EZYield Synch</fullName>
            </value>
            <value>
                <fullName>Facebook Widget</fullName>
            </value>
            <value>
                <fullName>Featured Property</fullName>
            </value>
            <value>
                <fullName>FuturePace</fullName>
            </value>
            <value>
                <fullName>GDS Advertising</fullName>
            </value>
            <value>
                <fullName>GHS</fullName>
            </value>
            <value>
                <fullName>GMS</fullName>
            </value>
            <value>
                <fullName>Guestview360</fullName>
            </value>
            <value>
                <fullName>Hotelligence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>