force-app/main/default/objects/TC_Case__x/fields/Outage_Escalation_c__c.field-meta.xml
<CustomField>
    <fullName>Outage_Escalation_c__c</fullName>
    <externalDeveloperName>Outage_Escalation__c</externalDeveloperName>
    <inlineHelpText>If case is for a system wide outage, System Outage should be selected. Escalation is to be used for EZYield case escalations ONLY.</inlineHelpText>
    <label>Outage/Escalation</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>System Outage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>