force-app/main/default/objects/TC_Case__x/fields/owner_name_c__c.field-meta.xml
<CustomField>
    <fullName>owner_name_c__c</fullName>
    <externalDeveloperName>owner_name__c</externalDeveloperName>
    <label>owner name</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>