force-app/main/default/objects/TC_Case__x/fields/PMS_Vendor_c__c.field-meta.xml
<CustomField>
    <fullName>PMS_Vendor_c__c</fullName>
    <externalDeveloperName>PMS_Vendor__c</externalDeveloperName>
    <label>PMS Vendor</label>
    <length>100</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>