force-app/main/default/objects/TC_Case__x/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <externalDeveloperName>Priority</externalDeveloperName>
    <label>Priority</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Blocker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>