force-app/main/default/objects/TC_Case__x/fields/Proactive_Activity_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Proactive_Activity_Type_c__c</fullName>
    <externalDeveloperName>Proactive_Activity_Type__c</externalDeveloperName>
    <label>Proactive Activity Type</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation Notification</fullName>
            </value>
            <value>
                <fullName>EQC Pushstyle Email</fullName>
            </value>
            <value>
                <fullName>FMS</fullName>
            </value>
            <value>
                <fullName>Found during case resolution</fullName>
            </value>
            <value>
                <fullName>Health Status Check</fullName>
            </value>
            <value>
                <fullName>LogMeIn Alerts</fullName>
            </value>
            <value>
                <fullName>Message Queue Monitoring</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Oracle Report</fullName>
            </value>
            <value>
                <fullName>Pay for Play</fullName>
            </value>
            <value>
                <fullName>Pay for Training</fullName>
            </value>
            <value>
                <fullName>PMS Connect One Event Alert</fullName>
            </value>
            <value>
                <fullName>PMS Connect URL Alert</fullName>
            </value>
            <value>
                <fullName>PMS Connect Zero Event Alert</fullName>
            </value>
            <value>
                <fullName>Post Release Follow Up</fullName>
            </value>
            <value>
                <fullName>Proactive Follow Up</fullName>
            </value>
            <value>
                <fullName>Reject Queues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>