force-app/main/default/objects/TC_Case__x/fields/Processing_time_AP_EMEA_c__c.field-meta.xml
<CustomField>
    <fullName>Processing_time_AP_EMEA_c__c</fullName>
    <externalDeveloperName>Processing_time_AP_EMEA__c</externalDeveloperName>
    <label>Processing time (AP) EMEA</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>